--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-mood-journal",
+  "name": "My_AI_Mood_Note",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://krataviolet.github.io/My_AI_Mood_Note/",
